添加了语音识别初始化，但是还需要添加权限，下一步添加语音识别的权限

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -199,6 +199,19 @@
                 android:layout_height="wrap_content"
                 android:text="笑脸识别"
                 tools:ignore="HardcodedText" />
+            <Button
+            android:id="@+id/speechrecognition_button_start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="语音识别开始"
+            tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/speechrecognition_button_stop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="语音识别停止"
+                tools:ignore="HardcodedText" />
 
             <Button
                 android:id="@+id/car_model_button"
