--- a/uiasr/src/main/res/layout/common.xml
+++ b/uiasr/src/main/res/layout/common.xml
@@ -1,46 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:orientation="vertical"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/txtResult"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:padding="8dp"
-        android:id="@+id/txtResult" />
+        android:textColor="#000000"
+        android:textSize="30dp" />
 
     <View
         android:layout_width="match_parent"
-        android:background="#999"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="#999" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <TextView
+            android:id="@+id/txtLog"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="12dp"
-            android:id="@+id/txtLog" />
+            android:textSize="12dp" />
     </ScrollView>
 
 
     <Button
+        android:id="@+id/setting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/setting"
-        android:id="@+id/setting"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:text="@string/setting" />
 
     <Button
+        android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/start"
-        android:id="@+id/btn"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:text="@string/start" />
 
 </LinearLayout>
